--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -51,13 +51,6 @@ form {
         border-radius: 5px;
     }
 
-    #fields {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 10px;
-    }
-
     .field_line {
         display: flex;
         gap: 20px;
